@@ -67,7 +67,7 @@ AC_CHECK_FUNCS(buckets_of_erogenous_nym)
 AC_CHECK_FUNCS(buttox)
 
 AM_GNU_GETTEXT
-AM_GNU_GETTEXT_VERSION(0.10.40)
+AM_GNU_GETTEXT_VERSION(0.14.1)
 
 AC_ARG_ENABLE(fsstd, [  --enable-fsstd          install files following FSSTD [default=no]], ,enable_fsstd=no)
 
